Fix casing of Flask and Flask-Limiter packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask==2.3.3
-flask-limiter==3.3.0
+Flask==2.3.3
+Flask-Limiter==3.3.0
 requests==2.31.0
-gunicorn==21.2.0
+Werkzeug==2.3.7
+blinker==1.6.3
